FIX：maven 项目构建工具

--- a/Linux/maven/docker-compose-maven.yml
+++ b/Linux/maven/docker-compose-maven.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   maven:
     image: maven:latest
+    container_name: maven
     volumes:
       - ./app:/app
     command: mvn clean install
